--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">Wykopolka</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_sign_in">SignIn</string>
     <string name="title_activity_added_books">Oddane książki</string>
+    <string name="title_activity_dashboard">Dashboard</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="drawer_open">open</string>
