--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,7 @@
     <string name="message_stat_added_books">Oddanych książek</string>
     <string name="transition_book_cover">book_cover</string>
     <string name="transition_gradient">gradient</string>
+    <string name="title_activity_book_panel">Panel książek</string>
+    <string name="tab_title_my_books">moje książki</string>
+    <string name="tab_title_added_books">oddane książki</string>
 </resources>
