--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,8 +39,8 @@
 <big><b>9. Czy mogę odzyskać oddaną książkę?\n\n</b></big>Tak - Opcja wypożyczenia czasowego daje możliwość szybkiego odzyskania swojej książki. Ma to zastosowanie szczególnie w przypadku książek technicznych, do których często wracamy. Jeśli opcja ta jest zaznaczona, osoba dodająca książkę na Wykopółkę po dodaniu swojej pozycji na wishlistę pojawi się jako pierwsza w kolejce do otrzymania książki. Nadal będzie musiała poczekać aż aktualny posiadacz ukończy czytanie, ale otrzyma możliwość zwrotu książki poza kolejką.\n\n
 <big><b>10. Skąd pewność, że oddam pożyczoną książkę?\n\n</b></big>Znikąd. System stara się jak najdokładniej odsiewać osoby, które niszczą lub zalegają z książkami, jednak wszystko ciągle opiera się na zaufaniu. Wykopółka powstała w odpowiedzi na książki, które po trafieniu w #rozdajo już nigdy nie wracały w mirkowy obieg. Jeśli uda się puścić dalej choć część z tych książek to obwieścimy sukces. ;)
     </string>
-    <string name="faq_ext">FAQ</string>
-    <string name="najcze_ciej_zadawane_pytania">Najcześciej zadawane pytania</string>
+    <string name="faq">FAQ</string>
+    <string name="faq_most_asked_questions">Najcześciej zadawane pytania</string>
     <string name="faq_back">powrót</string>
 
 </resources>
