Add: new values

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="owned_by">Aktualnie w rękach:</string>
     <string name="genre">Gatunek</string>
     <string name="description">Opis</string>
+    <string name="book_description">Opis książki(Recenzja)</string>
     <string name="author">Autor</string>
     <string name="search_hint">Tytuł, autor, gatunek...</string>
     <string name="message_added_to_wishlist">Dodano książkę na listę życzeń!</string>
@@ -90,5 +91,12 @@
     <string name="search_message_by_genre">Książki znalezione po gatunkach</string>
     <string name="search_message_by_author">Książki znalezione po autorze</string>
     <string name="search_message_by_title">Książki znalezione po tytule</string>
-    <string name="search_message_failed">Niestety nie udało się znaleźć książek o podanym zapytaniu</string>
+    <string name="search_message_failed">Brak wyników</string>
+    <string name="title_activity_add_book">Dodaj książkę</string>
+    <string name="title_activity_edit_book">Edytuj książkę</string>
+    <string name="btn_message_take_photo">Zrób zdjęcie okładki</string>
+    <string name="book_title">Tytuł</string>
+    <string name="isbn_number">Number ISBN</string>
+    <string name="book_rating">Ocena książki</string>
+    <string name="book_quality">Stan książki</string>
 </resources>
