--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,8 +16,8 @@
     <string name="search_hint">Tytuł, autor, gatunek...</string>
     <string name="message_added_to_wish_list">Dodano książkę na listę życzeń!</string>
     <string name="action_go_to_wishlist">Przejdź do listy życzeń</string>
-    <string name="message_stat_readed_books">Przeczytanych książek</string>
-    <string name="message_stat_ranking_position">Pozycja w rankingu</string>
+    <string name="message_stat_read_books">Przeczytanych książek</string>
+    <string name="message_stat_on_wish_list">Książek na liście życzeń</string>
     <string name="message_stat_added_books">Oddanych książek</string>
     <string name="transition_book_cover">book_cover</string>
     <string name="transition_gradient">gradient</string>
